# projeto-faculdade

./: .gitignore  DOCKER_SETUP.md  README.md  db.json  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  server.js
.github/workflows/: ci.yml
assets/css/: dashboard.css  lista_cliente.css
back/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt  run.py
back/app/: database.py  main.py
back/app/models/: __init__.py  expense.py  schemas.py  users.py
back/app/routers/: expense.py  expenses.py  users.py
back/app/schemas/: expense.py
back/app/services/: carbon_interface.py
back/prisma/: schema.prisma
back/prisma/migrations/20250915211550_init/: migration.sql
controller/: atualizaDespesa-controlle.js  atualizaDespesa-controller.js  cadastraDespesas-controlle.js  cadastraDespesas-controller.js  listaDespesas-controller.js
frontend/: package-lock.json  package.json
init-scripts/: 01-init.sql  seed_categories.py
prisma/: dev.db  dev.db-journal  schema.prisma
project-cost/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js
project-cost/src/: App.css  App.tsx  index.css
service/: expense-service.js  expenses.db  sum-expense.js
src/: App.tsx  server.ts
src/context/: ExpenseContext.tsx
src/data/: mockData.ts
src/pages/: Dashboard.tsx
telas/: cadastra_despesa.html  cadastro_concluido.html  cadastro_produto.html  dashboard.html  edicao_concluida.html  edita_despesa.html  erro.html  lista_despesa.html
(+28 files in other folders)
