[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Nitilima <nicollelimadosanjos@gmail.com>"]
readme = "README.md"
package-mode = false  # Isso desativa a instalação do pacote

[tool.poetry.dependencies]
python = "^3.13"
uvicorn = { version = "^0.35.0", extras = ["standard"] }
prisma = { version = "^0.15.0", extras = ["fastapi"] }
fastapi = "^0.116.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"